--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<li>
 				<div class="content">
 					<h3>Flex Mundi</h3>
-					<p>A Flex Mundi é uma empresa de engenharia, com foco em engenharia clínica e manutenção hospitalar. Como estágiaria de TI, lá eu ficava responsável por fazer a manutenção de computadores e impressoras, assim como atualizar, sempre que necessário, o site da empresa. Lidei com periféricos, instalação de anti-vírus e um pouco de suporte técnico aos funcionários. O estágio durou um ano, sem carteira assinada.</p>
+					<p>A Flex Mundi é uma empresa de engenharia, com foco em engenharia clínica e manutenção hospitalar. Como estágiaria de TI, lá eu ficava responsável por fazer a manutenção de computadores e impressoras, assim como atualizar, sempre que necessário, o site da empresa. Lidei com periféricos, instalação de anti-vírus e um pouco de suporte técnico aos funcionários. O estágio durou <b>um ano</b>, sem carteira assinada.</p>
 				</div>
 				<div class="time">
 					<h4>Outubro 2016</h4>
@@ -22,7 +22,7 @@
 			<li>
 				<div class="content">
 					<h3>Unioncobra Assessoria de Cobranças</h3>
-					<p>A Union é uma assessoria de cobranças localizada em Ibiúna-SP. Trabalhei lá por um mês e quatorze dias como estagiária em análise de cobranças. Eu era responsável por analisar o perfil e situação de cada cliente e efetuar as ligações através do sistema Néctar. Por um curto período, também fiquei responsável pelo back-office, no qual eu gerava e enviava os boletos através de e-mail.</p>
+					<p>A Union é uma assessoria de cobranças localizada em Ibiúna-SP. Trabalhei lá por <b>um mês e quatorze dias</b> como estagiária em análise de cobranças. Eu era responsável por analisar o perfil e situação de cada cliente e efetuar as ligações através do sistema Néctar. Por um curto período, também fiquei responsável pelo back-office, no qual eu gerava e enviava os boletos através de e-mail.</p>
 				</div>
 				<div class="time">
 					<h4>Fevereiro 2016</h4>
@@ -31,7 +31,7 @@
 			<li>
 				<div class="content">
 					<h3>SilverDime RH</h3>
-					<p>A SilverDime é uma empresa de recrutamento de mão de obra. Trabalhei como Consultora de Vendas, mas meu contrato com a empresa era temporário. O serviço foi prestado para a prefeitura, em nome de um dos Bancos. Eu fiquei responsável por abrir as contas dos clientes, tal como oferecer os benefícios ofertados pelo Banco, como seguros de vida, por exemplo. Não fui efetivada porque o cargo exigia viagens por todo o país, mas como eu estava apenas no 2º semestre de minha primeira graduação, optei por não aceitar a vaga. Meu contrato durou por um mês.</p>
+					<p>A SilverDime é uma empresa de recrutamento de mão de obra. Trabalhei como Consultora de Vendas, mas meu contrato com a empresa era temporário. O serviço foi prestado para a prefeitura, em nome de um dos Bancos. Eu fiquei responsável por abrir as contas dos clientes, tal como oferecer os benefícios ofertados pelo Banco, como seguros de vida, por exemplo. Não fui efetivada porque o cargo exigia viagens por todo o país, mas como eu estava apenas no 2º semestre de minha primeira graduação, optei por não aceitar a vaga. Meu contrato durou por <b>um mês</b>.</p>
 				</div>
 				<div class="time">
 					<h4>Agosto 2015</h4>
@@ -40,7 +40,7 @@
 			<li>
 				<div class="content">
 					<h3>Global: Cursos e Informática</h3>
-					<p>A Global é uma escola de informática e lan house localizada também em Ibiúna. Trabalhei lá como estagiária de atendimento ao público. Meu papel incluia o atendimento aos clientes e alunos, além de emissão de notas fiscais, 2ª via de documentos e abertura de cadastro dos clientes. Também era responsável pela digitação de textos acadêmicos, como TCCs e trabalhos de ensino médio. O estágio durou 3 meses, sem carteira assinada.</p>
+					<p>A Global é uma escola de informática e lan house localizada também em Ibiúna. Trabalhei lá como estagiária de atendimento ao público. Meu papel incluia o atendimento aos clientes e alunos, além de emissão de notas fiscais, 2ª via de documentos e abertura de cadastro dos clientes. Também era responsável pela digitação de textos acadêmicos, como TCCs e trabalhos de ensino médio. O estágio durou <b>três meses</b> , sem carteira assinada.</p>
 				</div>
 				<div class="time">
 					<h4>Abril 2013</h4>
